--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,8 +54,8 @@
     </com.google.android.material.textfield.TextInputLayout>
     //button
     <Button
-        android:id="@+id/registerBtn"
-        android:text="Register"
+        android:id="@+id/loginBtn"
+        android:text="Login"
         style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
@@ -63,10 +63,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordTIL"/>
 
+
+    //click to Register Activity
     <TextView
         android:id="@+id/dontthave_accountTV"
         android:text="Don't have account? Register"
-        android:layout_below="@+id/registerBtn"
+        android:layout_below="@+id/loginBtn"
         android:layout_marginTop="30dp"
         android:textAlignment="center"
         android:textStyle="italic"
