--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,17 +53,8 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/recoverPassTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Forget Password?"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:layout_below="@id/loginBtn"
-        android:layout_marginTop="10dp"/>
-    //button
+
+    //button login
     <Button
         android:id="@+id/loginBtn"
         android:text="Login"
@@ -74,6 +65,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/passwordTIL"/>
 
+    //Button Sign with google accounr
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleLoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/loginBtn"/>
+
+    //forget password
+    <TextView
+        android:id="@+id/recoverPassTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forget Password?"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_below="@id/googleLoginBtn"
+        android:layout_marginTop="10dp"/>
 
     //click to Register Activity
     <TextView
