--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,12 +66,14 @@
         android:layout_below="@id/passwordTIL"/>
 
     //Button Sign with google accounr
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googleLoginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/loginBtn"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/loginBtn"/>
+        android:layout_marginTop="2dp" />
 
     //forget password
     <TextView
