--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,6 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:gravity="center"
-        android:text="Home" />
+        android:text="apip elek" />
 
 </FrameLayout>
