--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,66 +7,87 @@
     tools:context=".ProfileFragment"
     tools:ignore="NamespaceTypo">
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-       
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="180dp"
-           android:background="@color/colorPrimaryDark">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-       </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:layout_marginTop="100dp">
+            <ImageView
+                android:id="@+id/coverIv"
+                android:src="@drawable/ic_add_image"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:background="@color/colorPrimaryDark">
 
-           <ImageView
-               android:id="@+id/avatarIv"
-               android:layout_marginStart="20dp"
-               android:background="@color/colorPrimary"
-               android:padding="1dp"
-               android:layout_width="120dp"
-               android:layout_height="120dp"
-               android:src="@drawable/ic_add_image"
-               android:layout_marginLeft="20dp" />
+            </ImageView>
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="vertical"
-               android:layout_marginLeft="5dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="100dp">
 
-               <TextView
-                   android:id="@+id/nameTv"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:textSize="25dp"
-                   android:layout_marginTop="1dp"
-                   android:layout_marginLeft="8dp"
-                   android:layout_marginStart="5dp"
-                   android:textColor="#ffff"/>
+                <ImageView
+                    android:id="@+id/avatarIv"
+                    android:layout_marginStart="20dp"
+                    android:background="@color/colorPrimary"
+                    android:padding="1dp"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/ic_dafault_img_white"
+                    android:layout_marginLeft="20dp" />
 
-               <TextView
-                   android:id="@+id/emailTv"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_marginLeft="5dp"
-                   android:layout_marginStart="5dp"
-                   android:textColor="#ffff"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="5dp">
 
-               <TextView
-                   android:id="@+id/phoneTv"
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_marginLeft="5dp"
-                   android:layout_marginStart="5dp"
-                   android:textColor="#ffff"/>
-           </LinearLayout>
+                    <TextView
+                        android:id="@+id/nameTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="25dp"
+                        android:layout_marginTop="1dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#ffff"/>
 
-       </LinearLayout>
-   </RelativeLayout>
-</ScrollView>
+                    <TextView
+                        android:id="@+id/emailTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#ffff"/>
+
+                    <TextView
+                        android:id="@+id/phoneTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#ffff"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+    //floating action button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_edit_white"
+        />
+
+</RelativeLayout>
